# IrrationalNumbers

./: .gitignore  README.md  build.sh  build_and_run.sh  duck.ai_2025-09-21_16-34-28.txt
includes/: root2.cpp
src/: CMakeLists.txt  main.cpp
src/includes/: common_math_functions.cpp  euler.cpp  ln2.cpp  main_header.hpp  pi.cpp
